# namefully-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
examples/: advanced.py  main.py
namefully/: __init__.py  _config.py  _constants.py  _errors.py  _full_name.py  _name.py  _namefully.py  _parser.py  _types.py  _utils.py  _validators.py  _version.py  builder.py
test/: _helpers.py  conftest.py  test_builder.py  test_config.py  test_errors.py  test_full_name.py  test_name.py  test_namefully.py  test_utils.py
